proyectoDevops/kubernetesDeployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-app-deployment
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: mi-app
  template:
    metadata:
      labels:
        app: mi-app
    spec:
      containers:
        - name: mi-app-container
          image: 700532872608.dkr.ecr.us-east-1.amazonaws.com/mi-aplicacion-repo:v1
          ports:
            - containerPort: 80
