proyectoDevops/kubernetesDeployment/mi-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-app-ingress
  namespace: default 
  annotations:
    kubernetes.io/ingress.class: "nginx"  
  rules:
  - host: myapp-mariano-andrigo.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-app-service
            port:
              number: 80
